--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Rangiora High Robotics</title>
 
-    <link rel="stylesheet" href="assets/stylesheets/index.css">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/stylesheets/index.css">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto|Gugi" rel="stylesheet">
 
@@ -162,14 +162,14 @@
 
     </div>
 
-    <script src="assets/javascript/jquery-3.3.1.min.js" charset="utf-8"></script>
+    <script src="/assets/javascript/jquery-3.3.1.min.js" charset="utf-8"></script>
 
     <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
-    <script src="assets/javascript/app.js" charset="utf-8"></script>
+    <script src="/assets/javascript/app.js" charset="utf-8"></script>
 
-    <script src="assets/javascript/popper.min.js" charset="utf-8"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
-    <script src="assets/javascript/functions.js" charset="utf-8"></script>
+    <script src="/assets/javascript/popper.min.js" charset="utf-8"></script>
+    <script src="/assets/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
+    <script src="/assets/javascript/functions.js" charset="utf-8"></script>
 
   </body>
 
