--- a/join/index.html
+++ b/join/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Rangiora High Robotics</title>
 
-    <link rel="stylesheet" href="assets/stylesheets/index.css">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/stylesheets/index.css">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto|Gugi" rel="stylesheet">
 
@@ -56,8 +56,8 @@
         <header class="header">
 
           <div class="header-titlebox">
-            <h1>Rangiora High Robotics</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
+            <h1>Rangiora High Robotics<br />Redirecting...</h1>
+            <p>If it doesn't redirect, just click <a href="/contact?view=join">Here</a> <a></a></p>
             <a href="/about" class="button button-blue">learn more</a>
           </div>
 
@@ -65,71 +65,19 @@
         </header>
 
 
-
-        <!-- Card Row 1 -->
         <div class="m-5"></div>
-        <div class="container">
-          <div class="row">
+        <div class="container rounded dangertape" style="height:50px;margin-bottom:-5px"></div>
+        <div class="container bg-white rounded text-center p-5" style="min-height:70vh;overflow-x:hidden">
 
-            <div class="col-lg p-3">
-
-              <!-- Rangiora High Robotics Material - Card example -->
-              <div class="gr-card">
-                <div class="gr-card-head" style="background-image:url('assets/images/vex4.jpg')">
-                </div>
-                <div class="gr-card-body">
-                  <span class="gr-card-title">Wanna learn more?</span>
-                  <p class="gr-card-text">In case you're unsure what this is, you can get some more information here. If you need more, feel free to <a href="/contact">contact us</a></p>
-                </div>
-                <div class="gr-card-foot dangertape">
-                  <a href="/about" class="button button-white button-ripple">LEARN MORE</a>
-                </div>
-              </div>
-              <!-- Rangiora High Robotics Material - Card example end -->
-
-            </div>
-
-            <div class="col-lg p-3">
-
-              <!-- Rangiora High Robotics Material - Card example -->
-              <div class="gr-card">
-                <div class="gr-card-head" style="background-image:url('assets/images/vex2.jpg')">
-                </div>
-                <div class="gr-card-body">
-                  <span class="gr-card-title">Photos and Videos</span>
-                  <p class="gr-card-text">Wanna see some cool photos and videos of all the stuff we've done? It's all here!</p>
-                </div>
-                <div class="gr-card-foot dangertape">
-                  <a href="/gallery" class="button button-white button-ripple">VIEW GALLERY</a>
-                </div>
-              </div>
-              <!-- Rangiora High Robotics Material - Card example end -->
-
-            </div>
-
-            <div class="col-lg p-3">
-
-              <!-- Rangiora High Robotics Material - Card example -->
-              <div class="gr-card">
-                <div class="gr-card-head" style="background-image:url('assets/images/vex1.jpg')">
-                </div>
-                <div class="gr-card-body">
-                  <span class="gr-card-title">Wanna be a part of it?</span>
-                  <p class="gr-card-text">Do you want to be a part of all this? It's free to join! Just <a href="/join">contact us!</a></p>
-                </div>
-                <div class="gr-card-foot dangertape">
-                  <a href="/join" class="button button-white button-ripple">JOIN</a>
-                </div>
-              </div>
-              <!-- Rangiora High Robotics Material - Card example end -->
-
-            </div>
+          <h1 class="text-success" style="font-size:60px;font-family:'Gugi', sans-serif"><b>Redirecting...</b></h1>
+          <p class="w-75" style="margin:auto;font-size:20px"><b>You are being redirected. Give us a second.<br />If it doesn't redirect in 5 seconds. Click <a href="/contact?view=join">Here</a></b></p>
 
 
-          </div>
         </div>
 
-
+        <script type="text/javascript">
+          window.location.replace("/contact?view=join");
+        </script>
 
 
 
@@ -211,15 +159,15 @@
 
     </div>
 
-    <script src="assets/javascript/jquery-3.3.1.min.js" charset="utf-8"></script>
+    <script src="../assets/javascript/jquery-3.3.1.min.js" charset="utf-8"></script>
 
 
         <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
-        <script src="assets/javascript/app.js" charset="utf-8"></script>
+        <script src="../assets/javascript/app.js" charset="utf-8"></script>
 
-    <script src="assets/javascript/popper.min.js" charset="utf-8"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
-    <script src="assets/javascript/functions.js" charset="utf-8"></script>
+    <script src="../assets/javascript/popper.min.js" charset="utf-8"></script>
+    <script src="../assets/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
+    <script src="../assets/javascript/functions.js" charset="utf-8"></script>
 
   </body>
 
