--- a/gallery/index.html
+++ b/gallery/index.html
@@ -74,11 +74,11 @@
 
           <nav class="img-nav">
             <div class="row">
-              <div class="col-sm-6 img-navitem text-center p-2" onclick="showImages()">
-                Images
+              <div class="col-sm-6 img-navitem text-center p-2 dangertape" onclick="showImages()">
+                <span class="p-2 bg-dark text-white rounded">Images</span>
               </div>
-              <div class="col-sm-6 img-navitem text-center p-2"  onclick="showVideos()">
-                Videos
+              <div class="col-sm-6 img-navitem text-center p-2 dangertape"  onclick="showVideos()">
+                <span class="p-2 bg-dark text-white rounded">Videos</span>
               </div>
             </div>
           </nav>
