--- a/contact/index.html
+++ b/contact/index.html
@@ -30,6 +30,7 @@
           <span class="nav-title"><a href="/">Rangiora High Robotics</a></span>
         </div>
         <div class="navibar-right">
+          <span><a href="/">Home</a></span>
           <span><a href="/about">About</a></span>
           <span><a href="/contact">Contact</a></span>
           <span><a href="/gallery">Gallery</a></span>
@@ -41,6 +42,7 @@
       <div class="nav-draw">
         <h1 class="nav-title">Rangiora High Robotics</h1>
         <a href="javascript:void(0)" class="text-danger closeDraw button-ripple">Close</a>
+        <a class="text-dark button-ripple" href="/">Home</a>
         <a class="text-dark button-ripple" href="/about">About</a>
         <a class="text-dark button-ripple" href="/contact">Contact</a>
         <a class="text-dark button-ripple" href="/gallery">Gallery</a>
@@ -111,6 +113,7 @@
               </div>
               <div class="col-md-6 footer-col2">
                 <!-- <button class="button button-blue" data-toggle="modal" data-target="#emailmodal">Email / Account</button><br /> -->
+                <a href="/" class="p-2 text-white">Home</a>
                 <a href="/about" class="p-2 text-white">About</a>
                 <a href="/contact" class="p-2 text-white">Contact</a>
                 <a href="/gallery" class="p-2 text-white">Gallery</a>
