--- a/index.html
+++ b/index.html
@@ -93,24 +93,6 @@
 
               <!-- Rangiora High Robotics Material - Card example -->
               <div class="gr-card">
-                <div class="gr-card-head" style="background-image:url('assets/images/vex2.jpg')">
-                </div>
-                <div class="gr-card-body">
-                  <span class="gr-card-title">Photos and Videos</span>
-                  <p class="gr-card-text">Wanna see some cool photos and videos of all the stuff we've done? It's all here!</p>
-                </div>
-                <div class="gr-card-foot dangertape">
-                  <a href="/gallery" class="button button-white button-ripple">VIEW GALLERY</a>
-                </div>
-              </div>
-              <!-- Rangiora High Robotics Material - Card example end -->
-
-            </div>
-
-            <div class="col-lg p-3">
-
-              <!-- Rangiora High Robotics Material - Card example -->
-              <div class="gr-card">
                 <div class="gr-card-head" style="background-image:url('assets/images/vex1.jpg')">
                 </div>
                 <div class="gr-card-body">
@@ -127,6 +109,49 @@
 
 
           </div>
+
+          <div class="row">
+            <div class="col-lg p-3">
+
+              <!-- Rangiora High Robotics Material - Card example -->
+              <div class="gr-card">
+                <div class="gr-card-head" style="background-image:url('assets/images/vex2.jpg')">
+                </div>
+                <div class="gr-card-body">
+                  <span class="gr-card-title">Photos and Videos</span>
+                  <p class="gr-card-text">Wanna see some cool photos and videos of all the stuff we've done? It's all here!</p>
+                </div>
+                <div class="gr-card-foot dangertape">
+                  <a href="/gallery" class="button button-white button-ripple">VIEW GALLERY</a>
+                </div>
+              </div>
+              <!-- Rangiora High Robotics Material - Card example end -->
+
+            </div>
+
+
+
+
+            <div class="col-lg p-3">
+
+              <!-- Rangiora High Robotics Material - Card example -->
+              <div class="gr-card">
+                <div class="gr-card-head" style="background-image:url('assets/images/vex3.jpg')">
+                </div>
+                <div class="gr-card-body">
+                  <span class="gr-card-title">Vex Robotics</span>
+                  <p class="gr-card-text">We participate in the VEX robotics competition. Learn more about vex by clicking <a href="https://www.vexrobotics.com/" target="_blank">here</a></p>
+                </div>
+                <div class="gr-card-foot dangertape">
+                  <a href="https://www.vexrobotics.com/" target="_blank" class="button button-white button-ripple">LEARN MORE</a>
+                </div>
+              </div>
+              <!-- Rangiora High Robotics Material - Card example end -->
+
+            </div>
+
+          </div>
+
         </div>
 
 
