--- a/contact/index.html
+++ b/contact/index.html
@@ -86,6 +86,7 @@
               <option value="Joining the group">Joining the group</option>
               <option value="General Questions">General Questions</option>
               <option value="Meeting up">Meeting up</option>
+              <option value="Website Errors">Website Errors</option>
             </select><br /><br />
 
             <input id="email-subject" type="text" name="su" class="form-control" placeholder="Subject"><br />
